Fix draggable modals

--- a/src/main/webapp/app/entities/left-unidirectional/left-unidirectional-detail.html
+++ b/src/main/webapp/app/entities/left-unidirectional/left-unidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.leftUnidirectional.detail.title">LeftUnidirectional</span> {{vm.leftUnidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
