--- a/src/main/webapp/app/entities/right-one-to-many-bidirectional/right-one-to-many-bidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-one-to-many-bidirectional/right-one-to-many-bidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightOneToManyBidirectional.detail.title">RightOneToManyBidirectional</span> {{vm.rightOneToManyBidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
