--- a/src/main/webapp/app/entities/right-one-to-one-bidirectional/right-one-to-one-bidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-one-to-one-bidirectional/right-one-to-one-bidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightOneToOneBidirectional.detail.title">RightOneToOneBidirectional</span> {{vm.rightOneToOneBidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
