--- a/src/main/webapp/app/entities/left-bidirectional/left-bidirectional-detail.html
+++ b/src/main/webapp/app/entities/left-bidirectional/left-bidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.leftBidirectional.detail.title">LeftBidirectional</span> {{vm.leftBidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
