--- a/src/main/webapp/app/entities/right-many-to-many-bidirectional/right-many-to-many-bidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-many-to-many-bidirectional/right-many-to-many-bidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightManyToManyBidirectional.detail.title">RightManyToManyBidirectional</span> {{vm.rightManyToManyBidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
