--- a/src/main/webapp/app/entities/right-many-to-many-unidirectional/right-many-to-many-unidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-many-to-many-unidirectional/right-many-to-many-unidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightManyToManyUnidirectional.detail.title">RightManyToManyUnidirectional</span> {{vm.rightManyToManyUnidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
