--- a/src/main/webapp/app/entities/right-many-to-one-unidirectional/right-many-to-one-unidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-many-to-one-unidirectional/right-many-to-one-unidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightManyToOneUnidirectional.detail.title">RightManyToOneUnidirectional</span> {{vm.rightManyToOneUnidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
