--- a/src/main/webapp/app/entities/right-one-to-many-unidirectional/right-one-to-many-unidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-one-to-many-unidirectional/right-one-to-many-unidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightOneToManyUnidirectional.detail.title">RightOneToManyUnidirectional</span> {{vm.rightOneToManyUnidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
