--- a/src/main/webapp/app/entities/right-one-to-one-unidirectional/right-one-to-one-unidirectional-detail.html
+++ b/src/main/webapp/app/entities/right-one-to-one-unidirectional/right-one-to-one-unidirectional-detail.html
@@ -1,5 +1,5 @@
 
-<div modal-draggable>
+<div>
     <h2><span data-translate="testcaseApp.rightOneToOneUnidirectional.detail.title">RightOneToOneUnidirectional</span> {{vm.rightOneToOneUnidirectional.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
